# endpoint

./: .gitmodules  BUILD.bazel  README.md  endpoint.go  go.mod  go.sum
controllers/: BUILD.bazel  dashboard.go
db/: BUILD.bazel  db.go
db/migrations/: 0000_base.sql  0001_settings.sql
static/css/: base.css
tmpl/: base.tmpl  dashboard.tmpl
