load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "endpoint_lib",
    srcs = ["endpoint.go"],
    embedsrcs = [
        "static/css/base.css",
        "static/css/bootstrap.css",
        "static/css/bootstrap.css.map",
        "static/css/bootstrap.min.css",
        "static/css/bootstrap.min.css.map",
        "static/css/font-awesome.css",
        "static/css/font-awesome.min.css",
        "static/fonts/fontawesome-webfont.eot",
        "static/fonts/fontawesome-webfont.svg",
        "static/fonts/fontawesome-webfont.ttf",
        "static/fonts/fontawesome-webfont.woff",
        "static/fonts/fontawesome-webfont.woff2",
        "static/fonts/glyphicons-halflings-regular.eot",
        "static/fonts/glyphicons-halflings-regular.svg",
        "static/fonts/glyphicons-halflings-regular.ttf",
        "static/fonts/glyphicons-halflings-regular.woff",
        "static/fonts/glyphicons-halflings-regular.woff2",
        "static/images/favicon.ico",
        "static/images/retrocomp-networks.png",
        "static/js/bootstrap.js",
        "static/js/bootstrap.min.js",
        "tmpl/base.tmpl",
        "tmpl/dashboard.tmpl",
    ],
    importpath = "gazelle/endpoint",
    visibility = ["//visibility:private"],
    deps = [
        "//endpoint/controllers:endpoint_lib",
        "//endpoint/db",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_binary(
    name = "endpoint",
    embed = [
        ":endpoint_lib",
    ],
    visibility = ["//visibility:public"],
)
